# omero-autotagger

./: Dockerfile  README.md  mkdocs.yml  omero_tagger.py  pod_deployment.yml  pyproject.toml  requirements.txt  rules.yml
.devcontainer/: Dockerfile  devcontainer.json
docs/: .readthedocs.yaml  requirements.md  usage.md
k8s/: docker-publish.yaml  omero-autotagger-config.yaml  omero-autotagger-cronjob.yaml
requirements/: requirements-test.txt
src/omero_autotagger/: __about__.py  __main__.py
